--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,6 @@
 <app-header></app-header>
 <main class="d-flex justify-content-center mt-5">
   <section class="container">
-    <h1>Some guys</h1>
-    <div class="row">
-      <div
-        class="col-12 col-md-6 col-lg-4 col-xl-3 mt-3"
-        *ngFor="let user of users"
-      >
-        <app-card [user]="user"></app-card>
-      </div>
-    </div>
+    <router-outlet></router-outlet>
   </section>
 </main>
