--- a/src/app/pages/operators-page/operators-page.component.html
+++ b/src/app/pages/operators-page/operators-page.component.html
@@ -1,4 +1,18 @@
 <h1>RxJS operators</h1>
-<div class="mt-4">
-  <router-outlet></router-outlet>
+<div class="mt-4 card text-center">
+  <div class="card-header">
+    <ul class="nav nav-pills card-header-pills">
+      <li class="nav-item" *ngFor="let page of pages">
+        <a
+          class="nav-link"
+          [routerLinkActive]="'active'"
+          [routerLink]="[page.path]"
+          >{{ page.title }}</a
+        >
+      </li>
+    </ul>
+  </div>
+  <div class="card-body">
+    <router-outlet></router-outlet>
+  </div>
 </div>
