--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,15 +14,14 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['']">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['operators']">RxJS perators</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['subjects']">Subjects</a>
+        <ul class="navbar-nav ms-3">
+          <li class="nav-item me-2" *ngFor="let page of pages">
+            <a
+              class="nav-link"
+              [routerLinkActive]="'active'"
+              [routerLink]="[page.path]"
+              >{{ page.title }}</a
+            >
           </li>
         </ul>
       </div>
