--- a/src/app/components/pages/operators/combination-page/combination-page.component.html
+++ b/src/app/components/pages/operators/combination-page/combination-page.component.html
@@ -1,1 +1,6 @@
-<h5 class="card-title">Combination operators</h5>
+<app-page-content
+  [title]="title"
+  [text]="text"
+  [relatedItems]="relatedOperators"
+>
+</app-page-content>
