feat: operator page contents

--- a/src/app/components/pages/operators/combination-page/combination-page.component.html
+++ b/src/app/components/pages/operators/combination-page/combination-page.component.html
@@ -1,6 +1,2 @@
-<app-page-content
-  [title]="title"
-  [text]="text"
-  [relatedItems]="relatedOperators"
->
+<app-page-content [title]="title" [text]="text" [relatedItems]="relatedItems">
 </app-page-content>
