--- a/src/app/components/pages/operators/take-page/take-page.component.html
+++ b/src/app/components/pages/operators/take-page/take-page.component.html
@@ -1,1 +1,2 @@
-<h5 class="card-title">take, takeUntil, takeWhat?</h5>
+<app-page-content [title]="title" [text]="text" [relatedItems]="relatedItems">
+</app-page-content>
