--- a/src/app/components/page-content/page-content.component.html
+++ b/src/app/components/page-content/page-content.component.html
@@ -1,11 +1,13 @@
 <section class="text-start">
-  <h4 class="card-title">{{ title }}</h4>
-  <div class="row mt-1">
-    <div [ngClass]="relatedItems.length > 0 ? 'col-9' : 'col-12'">
-      <p>{{ text }}</p>
+  <h4 class="card-title mt-2">{{ title }}</h4>
+  <div class="row">
+    <div
+      [ngClass]="relatedItems && relatedItems.length > 0 ? 'col-9' : 'col-11'"
+    >
+      <p class="mb-2">{{ text }}</p>
       <ng-content></ng-content>
     </div>
-    <div *ngIf="relatedItems" class="col-3">
+    <div *ngIf="relatedItems && relatedItems.length > 0" class="col-3">
       <h5>Related</h5>
       <div class="list-group">
         <a
