style: updated header

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 18rem">
+<div class="card">
   <div class="card-body">
     <h5 class="card-title">{{ user.firstname }} {{ user.lastname }}</h5>
     <p class="card-text">{{ user.companyName }}</p>
