--- a/src/app/components/pages/operators-page/operators-page.component.html
+++ b/src/app/components/pages/operators-page/operators-page.component.html
@@ -1,4 +1,9 @@
 <h1>RxJS operators</h1>
+<p>
+  Observables are like a water <b>stream</b>, using the right operators you can
+  control the stream flow. <br />
+  The combination of some operators is also called <b>pipeline</b>.
+</p>
 <div class="mt-4 card text-center">
   <div class="card-header">
     <ul class="nav nav-pills card-header-pills">
