--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,30 +1,19 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" [routerLink]="['/']">Angular for Beasts</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container d-flex justify-content-between">
+      <a class="d-inline-block navbar-brand" [routerLink]="['/']"
+        >Angular for Beasts</a
       >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-3">
-          <li class="nav-item me-2" *ngFor="let page of pages">
-            <a
-              class="nav-link"
-              [routerLinkActive]="'active'"
-              [routerLink]="[page.path]"
-              >{{ page.title }}</a
-            >
-          </li>
-        </ul>
-      </div>
+      <ul class="navbar-nav ms-3">
+        <li class="nav-item me-2" *ngFor="let page of pages">
+          <a
+            class="nav-link"
+            [routerLinkActive]="'active'"
+            [routerLink]="[page.path]"
+            >{{ page.title }}</a
+          >
+        </li>
+      </ul>
     </div>
   </nav>
 </header>
