fix: some fixes
a good commit message...

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <main class="d-flex justify-content-center mt-5">
-  <section class="container">
+  <section class="container-xxl">
     <router-outlet></router-outlet>
   </section>
 </main>
