--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container d-flex justify-content-between">
+    <div class="container-xxl d-flex justify-content-between">
       <a class="d-inline-block navbar-brand" [routerLink]="['/']"
         >Angular for Beasts</a
       >
