--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,9 +1,8 @@
 <div class="card">
+  <div class="card-header">
+    <ng-content select="[header]"></ng-content>
+  </div>
   <div class="card-body">
-    <h5 class="card-title">{{ user.firstname }} {{ user.lastname }}</h5>
-    <p class="card-text">{{ user.companyName }}</p>
-    <a href="{{ user.website }}" class="btn btn-primary"
-      >Visit {{ user.firstname }} website!</a
-    >
+    <ng-content></ng-content>
   </div>
 </div>
