--- a/src/app/components/pages/operators/combination-page/combination-page.component.html
+++ b/src/app/components/pages/operators/combination-page/combination-page.component.html
@@ -1,2 +1,36 @@
 <app-page-content [title]="title" [text]="text" [relatedItems]="relatedItems">
+  <div class="mt-4">
+    <button
+      class="btn btn-outline-primary me-2"
+      [disabled]="stream1$.isStopped"
+      (click)="stream1$.next(1)"
+    >
+      Emit stream <b>1</b>
+    </button>
+    <button
+      class="btn btn-outline-primary me-2"
+      [disabled]="stream2$.isStopped"
+      (click)="stream2$.next(2)"
+    >
+      Emit stream <b>2</b>
+    </button>
+    <button
+      class="btn btn-outline-danger"
+      [disabled]="stream1$.isStopped && stream2$.isStopped"
+      (click)="complete()"
+    >
+      Complete all streams
+    </button>
+  </div>
+  <ul class="mt-3 list-unstyled">
+    <li>
+      combineLatest emissions: <b>{{ combineLatestCounter }}</b>
+    </li>
+    <li>
+      zip emissions: <b>{{ zipCounter }}</b>
+    </li>
+    <li>
+      forkJoin emissions: <b>{{ forkJoinCounter }}</b>
+    </li>
+  </ul>
 </app-page-content>
