--- a/src/app/components/page-content/page-content.component.html
+++ b/src/app/components/page-content/page-content.component.html
@@ -1,18 +1,18 @@
-<section class="text-start">
-  <h2 class="card-title mt-2">{{ title }}</h2>
+<section class="text-start mt-2">
   <div class="row">
     <div
       class="col-12"
       [ngClass]="
-        relatedItems && relatedItems.length > 0 ? 'col-lg-9' : 'col-lg-11'
+        relatedItems && relatedItems.length > 0 ? 'col-md-9' : 'col-md-11'
       "
     >
-      <p class="mb-2">{{ text }}</p>
+      <h2 class="card-title">{{ title }}</h2>
+      <p class="mb-4 w-75">{{ text }}</p>
       <ng-content></ng-content>
     </div>
     <div
       *ngIf="relatedItems && relatedItems.length > 0"
-      class="col-12 col-lg-3"
+      class="col-12 col-md-3"
     >
       <h5 class="fw-bolder">Related</h5>
       <div class="list-group">
