--- a/src/app/components/pages/operators/combination-page/combination-page.component.html
+++ b/src/app/components/pages/operators/combination-page/combination-page.component.html
@@ -1,5 +1,5 @@
 <app-page-content [title]="title" [text]="text" [relatedItems]="relatedItems">
-  <div class="mt-4">
+  <div>
     <button
       class="btn btn-outline-primary me-2"
       [disabled]="stream1$.isStopped"
