feat: retry and retryWhen

--- a/src/app/components/pages/home-page/home-page.component.html
+++ b/src/app/components/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<h1>This guys are here just for fill the page, LOL.</h1>
+<h1>These guys are here just for fill the page, LOL.</h1>
 <div class="mt-4 row" *ngIf="users$ | async as users">
   <div
     class="col-12 col-md-6 col-lg-4 col-xl-3 mt-3"
