--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main class="d-flex justify-content-center mt-5">
+<main class="d-flex justify-content-center mt-5 mb-5">
   <section class="container-xxl">
     <router-outlet></router-outlet>
   </section>
