--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
         <li class="nav-item me-2" *ngFor="let page of pages">
           <a
             class="nav-link"
-            [routerLinkActive]="'active'"
+            [routerLinkActive]="'active fw-bold'"
             [routerLink]="[page.path]"
             >{{ page.title }}</a
           >
