refactor: multiple ng-content for page-wrapper

--- a/src/app/components/cards/card-wrapper/card-wrapper.component.html
+++ b/src/app/components/cards/card-wrapper/card-wrapper.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <ng-content select="[header]"></ng-content>
+    <h5 class="card-title pt-1" header>{{ title }}</h5>
   </div>
   <div class="card-body">
     <ng-content></ng-content>
