--- a/src/app/components/pages/operators/retry-page/retry-page.component.html
+++ b/src/app/components/pages/operators/retry-page/retry-page.component.html
@@ -1,5 +1,9 @@
-<app-page-content [title]="title" [text]="text" [relatedItems]="relatedItems">
-  <div class="accordion" id="accordon" *ngIf="users$ | async as users">
+<app-page-wrapper [relatedItems]="relatedItems">
+  <div header>
+    <h2 class="card-title">{{ title }}</h2>
+    <p class="mb-5 w-75">{{ text }}</p>
+  </div>
+  <div class="accordion" id="accordon" *ngIf="users$ | async as users" body>
     <div class="accordion-item" *ngFor="let user of users; index as i">
       <h2 class="accordion-header" id="heading{{ user.id }}">
         <button
@@ -29,4 +33,4 @@
       </div>
     </div>
   </div>
-</app-page-content>
+</app-page-wrapper>
