--- a/src/app/components/pages/home-page/home-page.component.html
+++ b/src/app/components/pages/home-page/home-page.component.html
@@ -1,21 +1,8 @@
 <h1>These guys are here just for fill the page, LOL.</h1>
 <div class="mt-4 row" *ngIf="users$ | async as users">
-  <div
-    class="col-12 col-md-6 col-lg-4 col-xl-3 mt-3"
+  <app-user-card
     *ngFor="let user of users"
-  >
-    <app-card-wrapper>
-      <h5 class="card-title pt-1" header>
-        {{ user.name }}
-      </h5>
-      <div class="card-text">
-        <ul class="list-unstyled mb-0">
-          <li>{{ user.company.name }}</li>
-          <li>{{ user.phone }}</li>
-          <li>{{ user.email }}</li>
-          <li>{{ user.address.street }}</li>
-        </ul>
-      </div>
-    </app-card-wrapper>
-  </div>
+    [user]="user"
+    class="col-12 col-md-6 col-lg-4 col-xl-3 mt-3"
+  ></app-user-card>
 </div>
