--- a/src/app/components/pages/operators/combination-page/combination-page.component.html
+++ b/src/app/components/pages/operators/combination-page/combination-page.component.html
@@ -1,7 +1,7 @@
 <app-page-wrapper [relatedItems]="relatedItems">
   <div header>
     <h2 class="card-title">{{ title }}</h2>
-    <p class="mb-5 w-75">{{ text }}</p>
+    <p>{{ text }}</p>
   </div>
   <ng-container body>
     <div>
