--- a/src/app/components/pages/operators/mapping-page/mapping-page.component.html
+++ b/src/app/components/pages/operators/mapping-page/mapping-page.component.html
@@ -1,7 +1,7 @@
 <app-page-wrapper [relatedItems]="relatedItems">
   <div header>
     <h2 class="card-title">{{ title }}</h2>
-    <p class="mb-5 w-75">{{ text }}</p>
+    <p>{{ text }}</p>
   </div>
   <ng-container *ngIf="users$ | async as users" body>
     <div class="mt-2 mb-5 w-75 form-floating">
